fix(web-components): fixed hyphenated title link on Safari
Added -webkit-hyphens: none which should remove hyphenated text on Safari only

--- a/packages/web-components/src/components/ic-top-navigation/ic-top-navigation.css
+++ b/packages/web-components/src/components/ic-top-navigation/ic-top-navigation.css
@@ -252,6 +252,7 @@ slot[name="toggle-icon"] svg {
       margin-right: var(--ic-space-xxxs);
       word-break: break-word;
       hyphens: auto;
+      hyphens: none; /* Safari Only */
     }
 
     .top-panel-container {
